--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 
 <body>
 
+    <div class="container">
+        <div class="slider">
+
+            <div class="items">
+
+            </div>
+
+            <div class="prev"> &larr; </div>
+            <div class="next"> &rarr; </div>
+
+        </div>
+    </div>
 
     <!-- COLLEGAMENTO FILE JS -->
     <script type="text/javascript" src="./js/main.js"></script>
