aggiunta addEventListener (da far funzionare)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="slider">
 
-            <div class="items">
+            <div class="items mt-5">
 
             </div>
 
