--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Carosello Array di Oggetti</title>
 
+    <!-- FAVICON -->
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
+
+    <!-- FONT AWESOME -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- BOOTSTRAP -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -26,7 +39,23 @@
         <div class="thumbs-slider" id="thumbs-container"></div>
       </div>
 
-      <div class="slider-controls"></div>
+      <div class="slider-controls">
+        <button class="btn btn-outline-dark" id="prev">
+          <i class="fa-solid fa-chevron-left"></i>
+        </button>
+
+        <button class="btn btn-outline-dark" id="inverti-autoplay">
+          <i class="fa-solid fa-repeat"></i>
+        </button>
+
+        <button class="btn btn-outline-dark" id="stop-autoplay">
+          <i class="fa-solid fa-stop"></i>
+        </button>
+
+        <button class="btn btn-outline-dark" id="next">
+          <i class="fa-solid fa-chevron-right"></i>
+        </button>
+      </div>
     </div>
 
     <!-- COLLEGAMENTO FILE JS -->
